tout fini sauf prompt promotion

--- a/board.html
+++ b/board.html
@@ -25,6 +25,8 @@
 <button id="flipViewButton">Flip View</button>
 <button id="newGameButton">New Game</button>
 <span id="playerTurnContainer">Player turn :  <span id="playerTurn"> </span></span>
+<span id="checkWarning" class="hidden textred">check</span>
+<span id="gameResult" class="hidden"></span>
 <div>
 <div class="flex">
     <div id="boardDiv">
